<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="dev.foodie.navigationdemo.SpecifyAmountFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
      android:id="@+id/amount_edit_text"
      android:layout_width="match_parent"
      android:inputType="number"
      android:layout_height="wrap_content"
      android:layout_marginStart="30dp"
      android:layout_marginEnd="30dp"
      android:hint="@string/amount"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias=".3" />

    <Button
      android:id="@+id/cancel_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cancel"
      app:layout_constraintEnd_toStartOf="@id/send_button"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/amount_edit_text" />

    <Button
      android:id="@+id/send_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/send"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/cancel_button"
      app:layout_constraintTop_toBottomOf="@id/amount_edit_text" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>